finished replace soldier functionality